# xar_engine

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
applications/test_application/: CMakeLists.txt  main.cpp
applications/test_application/assets/: compile.sh  hardcoded_triangle.frag  hardcoded_triangle.frag.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
applications/test_application/shaders/: compile.sh
engine/: CMakeLists.txt
engine/include/: library.h
engine/include/xar_engine/asset/: image.hpp  image_loader.hpp  material.hpp  model.hpp  model_loader.hpp
engine/include/xar_engine/error/: exception.hpp
engine/include/xar_engine/graphics/: graphics_backend_factory.hpp  graphics_backend_type.hpp  renderer.hpp  renderer_type.hpp  vulkan_test.hpp
engine/include/xar_engine/graphics/api/: graphics_backend_factory.hpp  graphics_backend_type.hpp
engine/include/xar_engine/graphics/gpu_asset/: gpu_model_list_reference.hpp
engine/include/xar_engine/input/: button.hpp  input_event.hpp
engine/include/xar_engine/logging/: console_logger.hpp  default_log_formatter.hpp  file_logger.hpp  log_formatter.hpp  log_level.hpp  logger.hpp  logger_chain.hpp  stream_logger.hpp
engine/include/xar_engine/math/: epsilon.hpp  matrix.hpp  vector.hpp  vector_math.hpp
engine/include/xar_engine/meta/: enum.hpp  for_each.hpp  overloaded.hpp  resource_reference.hpp
engine/include/xar_engine/os/: application.hpp  button.hpp  input_event.hpp  service_register.hpp  window.hpp
engine/include/xar_engine/renderer/: renderer.hpp
engine/include/xar_engine/renderer/gpu_asset/: gpu_material.hpp  gpu_mesh_instance.hpp  gpu_model.hpp  gpu_model_list_reference.hpp
engine/include/xar_engine/renderer/module/: gpu_material_module.hpp  gpu_model_module.hpp
engine/include/xar_engine/renderer/unit/: gpu_material_unit.hpp  gpu_model_unit.hpp
engine/include/xar_engine/version/: version.hpp
engine/src/xar_engine/algorithm/: interval.hpp  interval_container.hpp
engine/src/xar_engine/asset/: assimp_model_loader.cpp  assimp_model_loader.hpp  image.cpp  image_loader.cpp  model.cpp  model_loader.cpp  stb_image_loader.cpp  stb_image_loader.hpp
engine/src/xar_engine/error/: exception.cpp  exception_utils.hpp
engine/src/xar_engine/file/: file.cpp  file.hpp
engine/src/xar_engine/graphics/: graphics_backend.cpp  graphics_backend.hpp  graphics_backend_factory.cpp  graphics_backend_resource_types.hpp  graphics_backend_type.cpp  renderer.cpp  renderer_impl.cpp  renderer_impl.hpp  renderer_type.cpp  resource_map.hpp  resource_reference.hpp  shader.cpp  shader.hpp  vulkan_test.cpp  window_surface.cpp  window_surface.hpp
engine/src/xar_engine/graphics/api/: buffer_reference.hpp  buffer_resource.hpp  command_buffer_resource.hpp  descriptor_pool_reference.hpp  descriptor_pool_resource.hpp  descriptor_set_layout_reference.hpp  descriptor_set_layout_resource.hpp  descriptor_set_reference.cpp  descriptor_set_reference.hpp  descriptor_set_resource.hpp  format.cpp  format.hpp  graphics_backend.cpp  graphics_backend.hpp  graphics_backend_factory.cpp  graphics_backend_type.cpp  graphics_pipeline_reference.cpp  graphics_pipeline_reference.hpp  graphics_pipeline_resource.hpp  image_reference.cpp  image_reference.hpp  image_resource.hpp  image_view_resource.hpp  queue_reference.hpp  queue_resource.hpp  resource_map.hpp  resource_reference.hpp  sampler_resource.hpp  shader_reference.cpp  shader_reference.hpp  shader_resource.hpp  surface_reference.hpp  surface_resource.hpp  swap_chain_reference.cpp  swap_chain_reference.hpp  swap_chain_resource.hpp
engine/src/xar_engine/graphics/backend/: graphics_backend.cpp  graphics_backend.hpp  vulkan_graphics_backend.cpp  vulkan_graphics_backend.hpp  vulkan_resource_storage.cpp  vulkan_resource_storage.hpp  vulkan_type_converters.cpp  vulkan_type_converters.hpp
engine/src/xar_engine/graphics/context/: window_surface.cpp  window_surface.hpp
engine/src/xar_engine/graphics/gpu_asset/: gpu_model.cpp  gpu_model.hpp
engine/src/xar_engine/graphics/vulkan/: buffer.cpp  buffer.hpp  command_buffer_pool.cpp  command_buffer_pool.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  device.cpp  device.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  swap_chain.cpp  swap_chain.hpp  vulkan.cpp  vulkan.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_command_buffer_pool.cpp  vulkan_command_buffer_pool.hpp  vulkan_descriptor_pool.cpp  vulkan_descriptor_pool.hpp  vulkan_descriptor_set.cpp  vulkan_descriptor_set.hpp  (+34 more)
engine/src/xar_engine/input/: button.cpp  input_event.cpp
engine/src/xar_engine/logging/: console_logger.cpp  default_log_formatter.cpp  file_logger.cpp  log_formatter.cpp  log_level.cpp  logger.cpp  logger_chain.cpp  stream_logger.cpp
engine/src/xar_engine/math/: epsilon.cpp  matrix.cpp
engine/src/xar_engine/meta/: enum_impl.hpp  for_each.hpp  overloaded.hpp  ref_counting_singleton.cpp  ref_counting_singleton.hpp  resource_map.hpp  shared_state.hpp  singleton.hpp
engine/src/xar_engine/os/: application.cpp  button.cpp  glfw_application.cpp  glfw_application.hpp  glfw_window.cpp  glfw_window.hpp  input_event.cpp  service_register.cpp  service_register_impl.cpp  service_register_impl.hpp  window.cpp
engine/src/xar_engine/renderer/: renderer.cpp  renderer_impl.cpp  renderer_impl.hpp  renderer_state.hpp
engine/src/xar_engine/renderer/gpu_asset/: gpu_material_data.hpp  gpu_model.cpp  gpu_model.hpp  gpu_model_data.cpp  gpu_model_data.hpp  gpu_model_data_buffer.cpp  (+1 more)
engine/src/xar_engine/time/: time.cpp  time.hpp
engine/src/xar_engine/version/: version.cpp
engine/test/: CMakeLists.txt
engine/test/common/: CMakeLists.txt
engine/test/common/src/: dummy.cpp
engine/test/test_application/: CMakeLists.txt  main.cpp
engine/test/unit/: CMakeLists.txt
(+211 files in other folders)
